# func2argparse

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml  pythonpublish.yml
docs/: Makefile  getversion.py
docs/source/: .gitignore  conf.py  index.rst  installation.rst  modules.rst  tutorial.rst
func2argparse/: __init__.py  _version.py  logging.ini
tests/: test_func_to_argparse.py
