[project]
name = "func2argparse"
description = "Convert python functions to argparse objects"
authors = [{ name = "Acellera", email = "info@acellera.com" }]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/Acellera/func2argparse"
"Bug Tracker" = "https://github.com/Acellera/func2argparse/issues"

[tool.setuptools.packages.find]
where = [""]
include = ["func2argparse*"]
namespaces = false

[tool.setuptools_scm]


[tool.pytest.ini_options]
python_files = "*.py"
python_classes = "_Test"
python_functions = "_test*"
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
